add post delete function

--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,13 @@
 	<script id="post" type="text/template">	    
 	    <div class="panel panel-default">
 		  	<div class="panel-body">
+		  		<p class="J_post_delete text-right"><span class="glyphicon glyphicon-remove-circle f-cp"></span></p>
 		  		<div>
 		  			<%= text %>
 		  		</div>
 		  		<p class="text-right f-mt10">
-		  			----<span><%= name %></span>	  				
+		  			----<span><%= name %></span>
+
 		  		</p>
 		  	</div>
 	  	</div>
