--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 		      	</ul>
 		      	<ul class="nav navbar-nav navbar-right">
 			        <li class="dropdown">
-			          	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="J_user_profile"></span><span class="caret"></span></a>
+			          	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span>&nbsp;<span class="J_user_profile"></span><span class="caret"></span></a>
 			          	<ul class="dropdown-menu" role="menu">
 			            	<li><a href="/logout">logout</a></li>
 			          	</ul>
