add #view ,when switch view , pre view remove

--- a/public/index.html
+++ b/public/index.html
@@ -29,22 +29,27 @@
 	      	</div>
 		</div>
 	</nav>
-	<div class="container J_container_me">
-		<div class="row">
-			<div class="col-md-8 J_me_posts">
-			</div>
-			<div class="col-md-4">
-				<div class="panel panel-default">
-				  	<div class="panel-body">
-				  		<form class="J_post_add" role="form" action="/posts" method="post">
-					  		<textarea class="form-control" rows="3" name="text" placeholder="enter you paper"></textarea>
-					  		<button type="submit" class="btn btn-primary btn-block f-mt10">save</button>
-				  		</form>
+	<div id="view">
+
+	</div>
+	<script id="meView" type="text/template">
+		<div class="container J_container_me">
+			<div class="row">
+				<div class="col-md-8 J_me_posts">
+				</div>
+				<div class="col-md-4">
+					<div class="panel panel-default">
+					  	<div class="panel-body">
+					  		<form class="J_post_add" role="form" action="/posts" method="post">
+						  		<textarea class="form-control" rows="3" name="text" placeholder="enter you paper"></textarea>
+						  		<button type="submit" class="btn btn-primary btn-block f-mt10">save</button>
+					  		</form>
+					  	</div>
 				  	</div>
-			  	</div>
+				</div>
 			</div>
 		</div>
-	</div>
+	</script>
 	<script id="post" type="text/template">	    
 	    <div class="panel panel-default">
 		  	<div class="panel-body">
